--- a/client/src/components/charts-skeletons/styles.scss
+++ b/client/src/components/charts-skeletons/styles.scss
@@ -5,10 +5,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  background: linear-gradient(90deg, 
-    rgba(226, 226, 226, 0.4) 25%, 
-    rgba(206, 206, 206, 0.6) 50%, 
-    rgba(226, 226, 226, 0.4) 75%);
+  background: linear-gradient(
+    90deg,
+    var(--border-default-grey) 25%,
+    var(--background-alt-grey) 50%,
+    var(--border-default-grey) 75%
+  );
   background-size: 200% 100%;
   animation: loading-shimmer 1.5s infinite;
 }
@@ -20,10 +22,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  background: linear-gradient(90deg, 
-    rgba(226, 226, 226, 0.4) 25%, 
-    rgba(206, 206, 206, 0.6) 50%, 
-    rgba(226, 226, 226, 0.4) 75%);
+  background: linear-gradient(
+    90deg,
+    var(--border-default-grey) 25%,
+    var(--background-alt-grey) 50%,
+    var(--border-default-grey) 75%
+  );
   background-size: 200% 100%;
   animation: loading-shimmer 1.5s infinite;
 }
@@ -46,10 +50,12 @@
     width: 100%;
     height: 20px;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, 
-      rgba(226, 226, 226, 0.4) 25%, 
-      rgba(206, 206, 206, 0.6) 50%, 
-      rgba(226, 226, 226, 0.4) 75%);
+    background: linear-gradient(
+      90deg,
+      var(--border-default-grey) 25%,
+      var(--background-alt-grey) 50%,
+      var(--border-default-grey) 75%
+    );
     background-size: 200% 100%;
     animation: loading-shimmer 1.5s infinite;
   }
@@ -58,10 +64,12 @@
     width: 70%;
     height: 50px;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, 
-      rgba(226, 226, 226, 0.4) 25%, 
-      rgba(206, 206, 206, 0.6) 50%, 
-      rgba(226, 226, 226, 0.4) 75%);
+    background: linear-gradient(
+      90deg,
+      var(--border-default-grey) 25%,
+      var(--background-alt-grey) 50%,
+      var(--border-default-grey) 75%
+    );
     background-size: 200% 100%;
     animation: loading-shimmer 1.5s infinite;
   }
